RESOLVED FIXED304360
[iOS] WirelessPlaybackMediaPlayerEnabled can't be enabled at runtime
https://bugs.webkit.org/show_bug.cgi?id=304360
Summary [iOS] WirelessPlaybackMediaPlayerEnabled can't be enabled at runtime
Andy Estes
Reported 2025-12-17 14:00:55 PST
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-17 14:01:03 PST
Andy Estes
Comment 2 2025-12-17 14:07:09 PST
EWS
Comment 3 2025-12-19 15:54:40 PST
Committed 304788@main (2db7bcd445af): <https://commits.webkit.org/304788@main> Reviewed commits have been landed. Closing PR #55588 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.