[iOS] WirelessPlaybackMediaPlayerEnabled can't be enabled at runtime https://bugs.webkit.org/show_bug.cgi?id=304360 rdar://166734272

Reviewed by Jean-Yves Avenard.

Fixed a bug where the wrong condition was specified in the definition of
WirelessPlaybackMediaPlayerEnabled. While here:
1. Moved the WebCore runtime setting from DeprecatedGlobalSettings to MediaStrategy.
2. Called MediaStrategy::resetMediaEngines() when WirelessPlaybackMediaPlayerEnabled or
   MockMediaDeviceRouteControllerEnabled changes.
3. Disabled MockMediaDeviceRouteControllerEnabled and cleared MediaDeviceRouteController's client
   in Internals::resetToConsistentState.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/page/DeprecatedGlobalSettings.h:
(WebCore::DeprecatedGlobalSettings::setWirelessPlaybackMediaPlayerEnabled): Deleted.
(WebCore::DeprecatedGlobalSettings::isWirelessPlaybackMediaPlayerEnabled): Deleted.
* Source/WebCore/platform/MediaStrategy.cpp:
(WebCore::MediaStrategy::setWirelessPlaybackMediaPlayerEnabled):
(WebCore::MediaStrategy::wirelessPlaybackMediaPlayerEnabled const):
* Source/WebCore/platform/MediaStrategy.h:
* Source/WebCore/platform/audio/ios/MediaDeviceRouteController.h:
* Source/WebCore/platform/audio/ios/MediaDeviceRouteController.mm:
(WebCore::setMockMediaDeviceRouteControllerEnabled):
* Source/WebCore/platform/graphics/MediaPlayer.cpp:
(WebCore::WTF_REQUIRES_LOCK):
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::resetToConsistentState):
* Source/WebCore/testing/Internals.idl:
* Source/WebCore/testing/MockMediaDeviceRoute.idl:
* Source/WebCore/testing/MockMediaDeviceRouteController.idl:
* Source/WebCore/testing/MockMediaDeviceRouteController.mm:
(WebCore::MockMediaDeviceRouteController::setEnabled):
(WebCore::MockMediaDeviceRouteController::activateRoute):
(WebCore::MockMediaDeviceRouteController::deactivateRoute):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updatePreferences):

Canonical link: https://commits.webkit.org/304788@main