Source/WebCore/testing/Internals.cpp
@@ -431,6 +431,7 @@
 #endif
 
 #if ENABLE(WIRELESS_PLAYBACK_MEDIA_PLAYER)
+#import "MediaDeviceRouteController.h"
 #import "MockMediaDeviceRouteController.h"
 #endif
 
@@ -743,6 +744,13 @@ void Internals::resetToConsistentState(Page& page)
 
 #if ENABLE(DAMAGE_TRACKING)
     page.chrome().client().resetDamageHistoryForTesting();
+#endif
+
+#if ENABLE(WIRELESS_PLAYBACK_MEDIA_PLAYER)
+#if HAVE(AVROUTING_FRAMEWORK)
+    MediaDeviceRouteController::singleton().setClient(nullptr);
+#endif
+    setMockMediaDeviceRouteControllerEnabled(false);
 #endif
 }
 
